# inac-ce

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml
doc/: manual.md
include/libinac-ce/: debug.h  error.h  lib.h  list.h  memory.h  mempool.h  portable.h  process.h  string.h  types.h  version.h.in
src/: config.h  error.c  lib.c  list.c  memory.c  portable.c  string.c
